SLLS-186 handle file-level issues during open issue in IDE flow